{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 24,
  "lineage": "525a5efa-1582-58a9-50ac-0eb450f68b86",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8080",
                  "1000-4000"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-02-04T01:26:39.754-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-da24fbd94c38/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/global/networks/default",
            "priority": 1000,
            "project": "qwiklabs-gcp-04-da24fbd94c38",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-02-04T01:26:51.785-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-da24fbd94c38/global/firewalls/l7-ilb-fw-allow-iap-hc",
            "log_config": [],
            "name": "l7-ilb-fw-allow-iap-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/global/networks/l7-ilb-network",
            "priority": 1000,
            "project": "qwiklabs-gcp-04-da24fbd94c38",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/global/firewalls/l7-ilb-fw-allow-iap-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16",
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.ilb_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-ilb-to-backends",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-02-04T01:26:51.805-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-da24fbd94c38/global/firewalls/l7-ilb-fw-allow-ilb-to-backends",
            "log_config": [],
            "name": "l7-ilb-fw-allow-ilb-to-backends",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/global/networks/l7-ilb-network",
            "priority": 1000,
            "project": "qwiklabs-gcp-04-da24fbd94c38",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/global/firewalls/l7-ilb-fw-allow-ilb-to-backends",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.ilb_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "google_compute_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2022-02-04T01:28:59.214-08:00",
            "id": "projects/qwiklabs-gcp-04-da24fbd94c38/regions/europe-west1/forwardingRules/l7-ilb-forwarding-rule",
            "ip_address": "10.0.1.5",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "l7-ilb-forwarding-rule",
            "network": "projects/qwiklabs-gcp-04-da24fbd94c38/global/networks/l7-ilb-network",
            "network_tier": "PREMIUM",
            "port_range": "80",
            "project": "qwiklabs-gcp-04-da24fbd94c38",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/regions/europe-west1/forwardingRules/l7-ilb-forwarding-rule",
            "subnetwork": "projects/qwiklabs-gcp-04-da24fbd94c38/regions/europe-west1/subnetworks/l7-ilb-subnet",
            "target": "projects/qwiklabs-gcp-04-da24fbd94c38/regions/europe-west1/targetHttpProxies/l7-ilb-target-http-proxy"
          },
          "dependencies": [
            "google_compute_instance_template.instance_template",
            "google_compute_network.ilb_network",
            "google_compute_region_backend_service.default",
            "google_compute_region_health_check.default",
            "google_compute_region_instance_group_manager.mig",
            "google_compute_region_target_http_proxy.default",
            "google_compute_region_url_map.default",
            "google_compute_subnetwork.ilb_subnet",
            "google_compute_subnetwork.proxy_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-8-jessie-v20160803",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/zones/us-central1-a/disks/apache-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-04-da24fbd94c38/zones/us-central1-a/instances/apache-instance",
            "instance_id": "8805870359553331134",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "rG-8iXkBqeU=",
            "metadata_startup_script": "#! /bin/bash\nsudo apt-get update\nsudo apt-get install apache2 -y\nsudo service apache2 restart\n",
            "name": "apache-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.198.68.197",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/global/networks/default",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/regions/us-central1/subnetworks/default",
                "subnetwork_project": "qwiklabs-gcp-04-da24fbd94c38"
              }
            ],
            "project": "qwiklabs-gcp-04-da24fbd94c38",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/zones/us-central1-a/instances/apache-instance",
            "tags": [
              "http-server",
              "web"
            ],
            "tags_fingerprint": "7qrfYRj1Bp8=",
            "zone": "us-central1-a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20220118",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/zones/europe-west1-b/disks/l7-ilb-test-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-04-da24fbd94c38/zones/europe-west1-b/instances/l7-ilb-test-vm",
            "instance_id": "7612852629408927639",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "1Z5xTmwSeNU=",
            "name": "l7-ilb-test-vm",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/global/networks/l7-ilb-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/regions/europe-west1/subnetworks/l7-ilb-subnet",
                "subnetwork_project": "qwiklabs-gcp-04-da24fbd94c38"
              }
            ],
            "project": "qwiklabs-gcp-04-da24fbd94c38",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/zones/europe-west1-b/instances/l7-ilb-test-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_network.ilb_network",
            "google_compute_subnetwork.ilb_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "ilb_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/qwiklabs-gcp-04-da24fbd94c38/global/networks/l7-ilb-network",
            "mtu": 0,
            "name": "l7-ilb-network",
            "project": "qwiklabs-gcp-04-da24fbd94c38",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/global/networks/l7-ilb-network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/regions/europe-west1/instanceGroups/l7-ilb-mig1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2022-02-04T01:28:06.921-08:00",
            "enable_cdn": false,
            "fingerprint": "fcL9flWqYt4=",
            "health_checks": [
              "projects/qwiklabs-gcp-04-da24fbd94c38/regions/europe-west1/healthChecks/l7-ilb-hc"
            ],
            "id": "projects/qwiklabs-gcp-04-da24fbd94c38/regions/europe-west1/backendServices/l7-ilb-backend-subnet",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "l7-ilb-backend-subnet",
            "port_name": "http",
            "project": "qwiklabs-gcp-04-da24fbd94c38",
            "protocol": "HTTP",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/regions/europe-west1/backendServices/l7-ilb-backend-subnet",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_instance_template.instance_template",
            "google_compute_network.ilb_network",
            "google_compute_region_health_check.default",
            "google_compute_region_instance_group_manager.mig",
            "google_compute_subnetwork.ilb_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-04T01:28:31.218-08:00",
            "default_service": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/regions/europe-west1/backendServices/l7-ilb-backend-subnet",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "K3QnHbzOC8s=",
            "host_rule": [],
            "id": "projects/qwiklabs-gcp-04-da24fbd94c38/regions/europe-west1/urlMaps/l7-ilb-regional-url-map",
            "map_id": 6214876684782489424,
            "name": "l7-ilb-regional-url-map",
            "path_matcher": [],
            "project": "qwiklabs-gcp-04-da24fbd94c38",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/regions/europe-west1/urlMaps/l7-ilb-regional-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance_template.instance_template",
            "google_compute_network.ilb_network",
            "google_compute_region_backend_service.default",
            "google_compute_region_health_check.default",
            "google_compute_region_instance_group_manager.mig",
            "google_compute_subnetwork.ilb_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "ilb_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-04T01:26:53.895-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/qwiklabs-gcp-04-da24fbd94c38/regions/europe-west1/subnetworks/l7-ilb-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "l7-ilb-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/global/networks/l7-ilb-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-04-da24fbd94c38",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/regions/europe-west1/subnetworks/l7-ilb-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.ilb_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "proxy_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-04T01:26:55.667-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/qwiklabs-gcp-04-da24fbd94c38/regions/europe-west1/subnetworks/l7-ilb-proxy-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "l7-ilb-proxy-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/global/networks/l7-ilb-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-04-da24fbd94c38",
            "purpose": "INTERNAL_HTTPS_LOAD_BALANCER",
            "region": "europe-west1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-da24fbd94c38/regions/europe-west1/subnetworks/l7-ilb-proxy-subnet",
            "stack_type": "UNSPECIFIED_STACK_TYPE"
          },
          "dependencies": [
            "google_compute_network.ilb_network"
          ]
        }
      ]
    }
  ]
}